--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@babel/core": "^7.12.3"
   },
   "scripts": {
-    "start": "node backend/server.js",
-    "dev": "nodemon --watch src backend/server.js"
+    "start": "nodemon --watch backend --exec babel-node backend/server.js",
+    "build": "rm -rf dist && babel backend --out-dir dist  && cd frontend && npm install && npm run build",
+    "heroku-postbuild": "npm run build && cd frontend && npm install && npm run build"
   },
   "author": "",
   "license": "ISC"
