--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "js-cookie": "^2.2.1",
     "material-icons": "^0.3.1",
     "react": "^16.14.0",
+    "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
